# Industry-AI-Flow

./: .claudeignore  .env.example  .gitattributes  .gitignore  .globalignore  .pylintrc  ADVANCED_AI_FEATURES_SOLVED_REPORT.md  AGENTS.md  ARCHITECTURE_CONSTRUCTION_INDUSTRY_TEST_REPORT.md  ARCHITECTURE_TESTING_WITH_VERSION_MANAGEMENT_REPORT.md  BUG_FIXES_REPORT.md  BUG_FIXES_SESSION_2_REPORT.md  CAPSTONE_FINAL_REPORT.md  CAPSTONE_TEST_EXECUTION_STATUS.md  CAPSTONE_TEST_REPORT.md  CLAUDE.md  CODE_EXECUTION_AND_DOCUMENT_PROCESSING_SUMMARY.md  CODE_REVIEW_STRATEGY.md  COMPREHENSIVE_AUDIT_REPORT.md  COMPREHENSIVE_REVIEW_REPORT.md  COMPREHENSIVE_TESTING_SUMMARY.md  DATABASE_ARCHITECTURE_COMPREHENSIVE_REPORT.md  DEPLOYMENT_PLAN.md  DEPLOYMENT_SUMMARY.md  DESIGN.md  Dockerfile.chinese-test  Dockerfile.data-analysis  FINAL_CLEANUP_REPORT.md  FINAL_RAG_UPGRADE_CONSENSUS.md  FINAL_TEST_REPORT.md  FINAL_TEST_SUCCESS_REPORT.md  INSTALLATION_GUIDE.md  INSTALL_PGVECTOR.md  LANGCHAIN_UPGRADE_PLAN_FUTURE_READY.md  Makefile  P0_FIXES_COMPLETION_REPORT.md  P0_FIXES_VALIDATION_REPORT.md  P0_ISSUES_FIX_PLAN.md  PHASE2_REPORT.md  PROJECT_RESTRUCTURE_PLAN.md  (+64 more)
.claude/: README.md  settings.json
.deprecated/: README.md
.github/: DOCUMENTATION_STANDARDS.md
backend/: config.py  init_comprehensive_database.py  init_database.py  main.py  requirements.txt
claude/: AGENT_SKILLS_AND_COMMANDS.md
config/: __init__.py  base.py  development.py  production.py  testing.py
datasets/: location_multipliers.json  remediation_log.json  unified_construction_projects_enhanced.csv  unified_construction_projects_remediated.csv
docker/: Dockerfile.chinese-test
docs/: ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.drawio  ARCHITECTURE_DIAGRAM.html  ARCHITECTURE_DIAGRAM.mermaid.md  CAPSTONE_POSTER.html  PRODUCT_ARCHITECTURE.drawio  README.md  TDO_FINDINGS_REPORT.md  VERSION_MANAGEMENT_GUIDE.md  _capture_product_arch.html  _capture_system_arch.html  capstone_report_medium.html  capstone_report_medium.md  data_analysis_hardening_report.md  data_analysis_ml_adversarial_review.md  data_analysis_sse_repro_eval_after_cache.json  generate_poster_image.py
examples/: demo_python313_paddleocr_solution.py  demo_version_solution.py
frontend/: .env.example  README.md  eslint.config.mjs  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vitest.config.ts
infra/: docker-compose.yaml  init.sql
references/: project-paths.md  validation-checklist.md
requirements/: base.txt  demo.txt  dev.txt  release-gate.txt
research/: README.md  SKILL.md  adoption_analysis.md  capstone-review-report.md  capstone_demo_smoke_test_plan_2026-02-12.md  capstone_hybrid_strategy_and_versioning_plan.md  capstone_optimization_execution_plan_2026-02-12.md  claude.plan.md  document-storage-solution.md  glm.archive.md  glm4.plan.md  implementation-roadmap.md  layered_gap_review_and_execution_plan_2026-02-12.md  llm-architecture-research.md  local-development-feasibility.md  local-development-feasibility.prompt.md  local-development-feasibility.prompt.md.tmp  local-development-feasibility.prompt.v2.md  new_architecture.md  quick-start-guide.md  qwen3.archive.md  rag-workflow-data-model-and-schema-design.md  rag-workflow-deep-optimization-plan.md  summary-and-next-steps.md  teamagency-structure-review-2026-02-12.md
samples/: 2025_toastmasters_how_to_send_your_evaluation_form_electronically_to_your_evaluator (2).docx  doc1.txt  doc2.txt  doc3.txt  tech1_fastapi.txt  tech2_python_deployment.txt  tech3_llm_context.txt  tech4_mac_performance.txt  tech5_database_batch.txt  tech6_vectors.txt  test_questions.json
scripts/: README.md  cleanup_project.sh  fix_all_imports.py  fix_import_paths.py  generate_document_summaries.py  generate_presentation.py  import_csv_datasets.py  rollback_cleanup.sh  scan_cleanup_targets.sh  setup-documentation-validation.sh  setup_local.sh  spike_agentic_glm5.py  spike_data_analysis_glm5.py  spike_merged_prompt.py  test_ocr.py  verify_env.sh
test_cases/: README.md  answer_generation_test_cases.md  architecture_construction_rag_performance_test.md  architecture_construction_test_cases.md  architecture_construction_testing_prompt.md  comprehensive_test_integration_plan.md  comprehensive_testing_prompt_for_coding_llms.md  data_analysis_code_execution_test_cases.md  extended_answer_generation_test_cases.md  extended_data_analysis_code_execution_test_cases.md  extended_ocr_integration_test_cases.md  extended_problem_classification_test_cases.md  extended_streamlit_interface_test_cases.md  extended_test_integration_plan.md  extended_user_feedback_impact_test_cases.md  extended_vector_retrieval_test_cases.md  normal_distribution_test_cases.md  ocr_integration_test_cases.md  paddleocr_test_cases.md  problem_classification_test_cases.md  rag_test_cases.md  streamlit_interface_test_cases.md  (+3 more)
(+831 files in other folders)
