[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "industry-ai-flow"
version = "0.1.0"
description = "Architecture and Construction Industry RAG System"
authors = [
    {name = "Industry AI Flow Team", email = "team@industry-ai-flow.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13,<3.14"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["paddleocr", "architecture", "construction", "ocr", "image-recognition", "building-drawings"]

dependencies = [
    # OCR stack (Python 3.13 compatible baseline)
    # NOTE: paddlepaddle runtime is installed separately when GPU/accelerator is required.
    "paddleocr==3.3.0",

    # 图像处理 - 建筑图纸识别必需
    "pillow>=11.3.0,<12.0.0",

    # 数值计算
    "numpy>=2.1.0,<2.2.0",

    # 数据处理
    "pandas>=3.0.0,<3.1.0",
    "matplotlib>=3.9.0,<3.11.0",

    # 网络和配置
    "requests==2.31.0",
    "pyyaml==6.0.2",
    "python-dotenv==1.0.0",

    # 工具库
    "tqdm==4.66.1",
    "click==8.1.7",
]

[project.optional-dependencies]
# 开发依赖
dev = [
    "pytest>=7.4.0,<7.5.0",
    "pytest-asyncio>=0.21.0,<0.22.0",
    "pytest-cov>=4.1.0,<4.2.0",
    "black>=24.10.0,<25.0.0",
    "flake8>=6.0.0,<6.1.0",
    "mypy>=1.5.1,<1.6.0",
]

# Jupyter开发环境
jupyter = [
    "jupyter>=1.0.0,<1.1.0",
    "notebook>=6.5.4,<6.6.0",
    "ipykernel>=6.25.0,<6.26.0",
    "jupyterlab>=4.0.0,<4.1.0",
]

# 可视化
visualization = [
    "matplotlib>=3.9.0,<3.11.0",
    "seaborn>=0.12.2,<0.13.0",
    "plotly>=5.15.0,<5.16.0",
]

# 生产环境
production = [
    "gunicorn>=21.0.0,<21.1.0",
    "uvicorn>=0.23.0,<0.24.0",
    "fastapi>=0.100.0,<0.101.0",
    "aiohttp>=3.8.5,<3.9.0",
]

# 数据库支持
database = [
    "sqlalchemy>=2.0.0,<2.1.0",
    "alembic>=1.11.0,<1.12.0",
    "redis>=4.6.0,<4.7.0",
]

# 完整安装 (包含所有可选依赖)
all = [
    "industry-ai-flow[dev,jupyter,visualization,production,database]"
]

[project.urls]
Homepage = "https://github.com/your-org/industry-ai-flow"
Documentation = "https://industry-ai-flow.readthedocs.io"
Repository = "https://github.com/your-org/industry-ai-flow.git"
"Bug Tracker" = "https://github.com/your-org/industry-ai-flow/issues"

[project.scripts]
industry-ai-flow = "industry_ai_flow.cli:main"
version-check = "version_manager:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["industry_ai_flow*"]

[tool.setuptools.package-data]
industry_ai_flow = ["*.json", "*.yaml", "*.yml", "data/*"]

# Black配置
[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort配置
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["industry_ai_flow"]

# MyPy配置
[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "numpy.*",
    "sklearn.*",
    "torch.*",
    "transformers.*",
    "sentence_transformers.*",
    "langchain.*",
    "paddleocr.*",
    "cv2.*",
]
ignore_missing_imports = true

# Pytest配置
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "gpu: marks tests that require GPU",
    "ocr: marks tests that require OCR dependencies",
]

# Coverage配置
[tool.coverage.run]
source = ["industry_ai_flow"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
